name:                Redish
version:             0.5.0
synopsis:            A simple, Redis-inspired, key-value store
license:             BSD3
license-file:        LICENSE
author:              Aryan Kumar Singh
maintainer:          aryansinghalpha97@gmail.com
homepage:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable Redish
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base, stm, network, containers, mtl, transformers,
                     attoparsec, bytestring
  Ghc-Options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language:  Haskell2010
